# theyeatforyou

./: README.md  debug.py  earnings.py  gifts.py  parser.py  pyproject.toml  utils.py
crawler/: interests.json  interets.py
grammars/: payment.lark  payment_header.lark  payment_sub.lark  shared.lark
